WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
VERIFIED FIXED
26960
[Gtk] caret offset not updated when selecting text
https://bugs.webkit.org/show_bug.cgi?id=26960
Summary
[Gtk] caret offset not updated when selecting text
Joanmarie Diggs
Reported
2009-07-03 21:40:24 PDT
Steps to reproduce: 1. Launch Epiphany and Accerciser. 2. In Epiphany, position the caret within some text. 3. In Accerciser's tree of accessibles on the left, highlight the accessible text object which corresponds to the object chosen in step 2. 4. In Accerciser's iPython Console, type: acc.queryText().caretOffset 5. In Epiphany, press Shift + Right Arrow two times to select two characters to the right 6. In Accerciser's iPython Console, type: acc.queryText().caretOffset Expected results: The offset returned in step 6 would reflect the new location of the caret (the step 4 offset + 2). Actual results: The offset returned in step 6 is the same as the step 4 offset. (Xan, I believe that the fix for this bug, combined with your fixes for
bug 26814
and
bug 26815
, should cause the presentation of selected text by ATs like Orca to JustWork(tm) -- which will be awesome. Sorry for not catching this one the other day!!)
Attachments
caretoffset.patch
(2.32 KB, patch)
2009-07-04 09:03 PDT
,
Xan Lopez
jmalonzo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Xan Lopez
Comment 1
2009-07-04 09:03:50 PDT
Created
attachment 32255
[details]
caretoffset.patch Well, it was basically the same bug than the other cases, but in a different place.
Jan Alonzo
Comment 2
2009-07-04 14:20:35 PDT
Comment on
attachment 32255
[details]
caretoffset.patch This looks fine. r=me. We need to think of a way to test these changes in the future while we don't have an AXController in DRT yet. Maybe more unit tests.
Joanmarie Diggs
Comment 3
2009-07-06 08:18:11 PDT
This patch seems to be working nicely. Thanks!!
Jan Alonzo
Comment 4
2009-07-07 03:51:30 PDT
(In reply to
comment #3
)
> This patch seems to be working nicely. Thanks!!
Thanks for verifying Joanmarie. Fix landed in
r45549
.
Joanmarie Diggs
Comment 5
2009-07-27 17:53:04 PDT
(re)Verifying. :-) Thanks.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug