2009-07-05  Xan Lopez  <xlopez@igalia.com>

Reviewed by Jan Alonzo.

        https://bugs.webkit.org/show_bug.cgi?id=26960
        [Gtk] caret offset not updated when selecting text

        Report the caret offset from the end of the selection so it works
        correctly for multi-char selections too (ie, anything that is not
        the zero width caret).

        * accessibility/gtk/AccessibilityObjectWrapperAtk.cpp:
        (webkit_accessible_text_get_caret_offset):

Canonical link: https://commits.webkit.org/37210@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45549 268f45cc-cd09-0410-ab3c-d52691b4dbfc